--- a/static/index.css
+++ b/static/index.css
@@ -14,8 +14,13 @@ html {
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
     max-width: 600px;
+}
+
+div.service {
+    width: 100%;
 }
 
 div.service:not(:last-child)::after {
@@ -24,6 +29,7 @@ div.service:not(:last-child)::after {
     background: lightgray;
     height: 1px;
     width: 95%;
+    transform: translate(2.5%, 0px);
 }
 
 h2 {
@@ -34,7 +40,6 @@ div.show-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    /* grid-template-columns: 1fr 1fr 1fr; */
 }
 
 a.show {
@@ -43,7 +48,6 @@ a.show {
     align-items: center;
     
     width: 180px;
-    /* margin: 10px; */
     justify-self: center;
 
     overflow: hidden;
