--- a/static/index.css
+++ b/static/index.css
@@ -42,7 +42,17 @@ div.show-list {
     justify-content: space-around;
 }
 
-a.show {
+a {
+    /* Remote link properties */
+    color: inherit;
+    text-decoration: none;
+}
+
+.show {
+    /* margin: 10px; */
+}
+
+a.show-all {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,15 +60,7 @@ a.show {
     width: 180px;
     justify-self: center;
 
-    /* Remote link properties */
-    color: inherit;
-    text-decoration: none;
-
     transition: 0.5s all ease-in-out;
-}
-
-a.show > p {
-    padding: 5px 15px 15px 15px;
 }
 
 img.show-image {
@@ -67,6 +69,53 @@ img.show-image {
     object-fit: cover;
 }
 
-a.show:hover {
-    transform: scale(1.04);
+.show-all:hover {
+    transform: scale(1.02);
+}
+
+ul.season-list {
+    list-style: none;
+    margin: 10px 10px;
+}
+
+input[type=checkbox]{
+	height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+.collapsible-content {
+    max-height: 0px;
+    overflow: hidden;
+  
+    transition: max-height 1s linear;
+}
+
+.lbl-toggle {
+    margin: 10px;
+}
+
+.lbl-toggle::before {
+    content: ' ';
+    display: inline-block;
+  
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+  
+    vertical-align: middle;
+    margin-right: .7rem;
+    transform: translateY(-2px);
+}
+
+.toggle:checked + .lbl-toggle::before {
+    transform: rotate(90deg) translateX(-3px);
+}
+
+.toggle:checked + .lbl-toggle + .collapsible-content {
+    max-height: 100vh;
+}
+
+.show-title {
+    margin: 10px;
 }
